# Crypto_AI_tool

./: .env.example  .gitignore  CryptoAI_Master_Prompt_v2.md  README.md  crypto_system_design.html  logs.1781354923136.json  main.py  pyproject.toml  requirements.txt  test_xag.py  walkthrough_v2.md
config/: settings.py
docker/: docker-compose.yml
migrations/: env.py
migrations/versions/: 99eeec806271_initial_schema.py
src/ai/: base.py  claude_provider.py  context_builder.py  deepseek_provider.py  factory.py  openai_provider.py
src/core/: alert_service.py  news_service.py  portfolio_service.py  position_sizer.py  risk_service.py  scheduler_service.py  signal_tracker.py  ta_service.py
src/data/: binance_client.py  cache.py  database.py
src/data/models/: __init__.py  alert.py  base.py  signal.py  trade.py  user.py  watchlist.py
src/data/repositories/: alert_repo.py  base.py  trade_repo.py  user_repo.py  watchlist_repo.py
src/database/: __init__.py  db_adapter.py  settings_repository.py  signal_repository.py
src/interfaces/scheduler/: jobs.py
src/interfaces/telegram/: bot.py  handlers.py
