[project]
name = "crypto-ai-tool"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiosqlite>=0.22.1",
    "alembic>=1.18.4",
    "anthropic>=0.105.2",
    "apscheduler>=3.11.2",
    "asyncpg>=0.31.0",
    "fastapi>=0.136.3",
    "feedparser>=6.0.12",
    "httpx>=0.28.1",
    "numpy>=2.4.6",
    "openai>=2.38.0",
    "pandas>=3.0.3",
    "psycopg2-binary>=2.9.12",
    "pydantic-settings>=2.14.1",
    "python-dotenv>=1.2.2",
    "python-telegram-bot[job-queue]>=22.7",
    "scipy>=1.17.1",
    "sqlalchemy>=2.0.50",
    "ta>=0.11.0",
    "tenacity>=9.1.4",
    "uvicorn[standard]>=0.48.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.15",
]
